# gemini-engine

./: Cargo.toml  README.md
examples/: complex-scene.rs  donut.rs  game-loop-root.rs  multi-movement.rs  quick-start.rs  self-resizing.rs  spinning-cube.rs
src/: elements.rs  elements3d.rs  gameloop.rs  lib.rs  main.rs  main_big.rs  main_clock.rs  main_triangles.rs  utils.rs  vec2d.rs  view3d.rs
src/elements/: ascii.rs  containers.rs  geometry.rs  view.rs
src/elements/ascii/: alignment.rs  animated_sprite.rs  sprite.rs  text.rs  text_align.rs
src/elements/containers/: collision_container.rs  pixel_container.rs  shader.rs  visibility_toggle.rs
src/elements/geometry/: line.rs  polygon.rs  rect.rs  triangle.rs
src/elements/view/: colchar.rs  mod.rs  pixel.rs  point.rs  scale_to_fit.rs  utils.rs  vec2d.rs  view_element.rs  wrapping.rs
src/elements/view/colchar/: colour.rs  mod.rs  modifier.rs
src/elements/view/pixel/: vec2d.rs
src/elements/view/pixel/colchar/: colour.rs  mod.rs  modifier.rs
src/elements3d/: grid.rs  grid_element.rs  mesh3d.rs  view3d.rs
src/elements3d/mesh3d/: mesh3d_presets.rs  mod.rs
src/elements3d/view3d/: display_mode.rs  face.rs  faces.rs  light.rs  mod.rs  render_helpers.rs  transform3d.rs  vec3d.rs
src/elements3d/view3d/display_mode/: light.rs  mod.rs
src/elements3d/view3d/render_helpers/: index_face.rs  projected_face.rs  projected_vertex.rs
src/elements3d/view3d/transform3d/: cached_rotation.rs  fast_rotate.rs  mod.rs  vec3d.rs
src/gameloop/: macros.rs  sleep_fps.rs  with_root.rs
src/utils/: macros.rs
src/view3d/: object3d.rs
src/view3d/object3d/: vec3d.rs
