[package]
name = "gemini-engine"
authors = ["RedPenguin"]
edition = "2021"
# when publishing, commit as "published <new version> to crates.io"
version = "0.11.3"
description = "A 2D/3D monospaced ASCII rendering engine for the terminal"
documentation = "https://docs.rs/gemini-engine"
readme = "README.md"
homepage = "https://github.com/redpenguinyt/gemini-rust"
repository = "https://github.com/redpenguinyt/gemini-rust"
license = "MIT"
keywords = ["gemini", "command-line", "ascii", "game-engine", "rendering-engine"]
categories = ["rendering", "rendering::engine", "graphics", "game-development", "command-line-interface"]

[dependencies]
termsize = "0.1"

[lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"

[lints.clippy]
enum_global_use = "warn"
pedantic = "warn"
nursery = "warn"
unwrap_used = "warn"